@@ -1,7 +1,7 @@
 #!/bin/sh
 
-if test -f @SYSCONFDIR@/sysconfig/printers; then
-    . @SYSCONFDIR@/sysconfig/printers
+if test -f @SYSCONFDIR@/sysconfig/printerconfig; then
+    . @SYSCONFDIR@/sysconfig/printerconfig
     export CUPS_AUTOCONFIG_ENABLE CUPS_AUTOCONFIG_DISABLE CUPS_AUTOCONFIG_DEBUG CUPS_AUTOCONFIG_POLICY
 fi
 
